syntax = "proto3";

package ypb;
option go_package = "/;ypb";
import "protoc/message.proto";

service HTTPFlowService {
  rpc GetHTTPFlowByHash(GetHTTPFlowByHashRequest) returns (HTTPFlow);
  rpc GetHTTPFlowById(GetHTTPFlowByIdRequest) returns (HTTPFlow);
  rpc GetHTTPFlowByIds(GetHTTPFlowByIdsRequest) returns (HTTPFlows);
  rpc QueryHTTPFlows(QueryHTTPFlowRequest) returns (QueryHTTPFlowResponse);
  rpc DeleteHTTPFlows(DeleteHTTPFlowRequest) returns (Empty);
  rpc SetTagForHTTPFlow(SetTagForHTTPFlowRequest) returns (Empty);
  rpc QueryHTTPFlowsIds(QueryHTTPFlowsIdsRequest) returns (QueryHTTPFlowsIdsResponse);
  rpc HTTPFlowsFieldGroup(HTTPFlowsFieldGroupRequest) returns (HTTPFlowsFieldGroupResponse);
}

message TagsCode {
  string Value = 1;
  int32 Total = 2;
}

message HTTPFlowsFieldGroupResponse {
  repeated TagsCode Tags = 1;
  repeated TagsCode StatusCode = 2;
}

message HTTPFlowsFieldGroupRequest {
  bool RefreshRequest = 1;
}

message SetTagForHTTPFlowRequest {
  int64 Id = 1;
  string Hash = 2;
  repeated string Tags = 3;
  repeated CheckSetTagsHTTPFlow CheckTags = 4;
}

message CheckSetTagsHTTPFlow {
  int64 Id = 1;
  string Hash = 2;
  repeated string Tags = 3;
}

message QueryHTTPFlowResponse {
  Paging Pagination = 1;
  repeated HTTPFlow Data = 2;
  int64 Total = 3;
}

message QueryHTTPFlowRequest {
  Paging Pagination = 1;
  string SourceType = 2;
  string Methods = 3;
  string SearchURL = 4;
  string StatusCode = 5;
  bool HaveCommonParams = 6;
  bool HaveBody = 7;
  string SearchContentType = 9;

  // 一般用于查询增量，查询所有更新前的内容
  int64 BeforeUpdatedAt = 10;
  int64 AfterUpdatedAt = 11;
  int64 AfterId = 12;
  int64 BeforeId = 13;

  string Keyword = 14;

  bool OnlyWebsocket = 15;

  // 查询包含在这个 URL 中的搜索结果
  repeated string IncludeInUrl = 16;
  // 不查询当前 URL 中的结果
  repeated string ExcludeInUrl = 17;
  // 仅查看当前 IP 对应的结果或不包含
  repeated string IncludeInIP = 18;
  repeated string ExcludeInIP = 19;

  repeated int64 ExcludeId = 20;

  repeated string IncludeInWhere = 21;
  repeated int64 IncludeId = 22;

  repeated string Tags = 23;
  string HaveParamsTotal = 24;
  repeated string Color = 25;
  int64 OffsetId = 26;

  int64 AfterBodyLength = 27;
  int64 BeforeBodyLength = 28;
  string IsWebsocket = 29;
}

message DeleteHTTPFlowRequest {
  bool DeleteAll = 1;
  repeated int64 Id = 4;
  repeated string ItemHash = 2;

  string URLPrefix = 3;
  QueryHTTPFlowRequest Filter = 5;
  repeated string  URLPrefixBatch = 6;
}

message QueryHTTPFlowsIdsRequest {
  repeated string IncludeInWhere = 1;
  string SourceType = 2;
}

message QueryHTTPFlowsIdsResponse {
  repeated HTTPFlow Data = 1;
}

message GetHTTPFlowByIdsRequest {
  repeated int64 Ids = 2;
}

message GetHTTPFlowByIdRequest {
  int64 Id = 1;
}

message GetHTTPFlowByHashRequest {
  string Hash = 1;
}
message HTTPFlows {
  repeated HTTPFlow Data = 1;
}


message FuzzableParam {
  string Position = 1;
  string ParamName = 2;
  bytes OriginValue = 3;
  bytes AutoTemplate = 4;
  bool IsHTTPS = 5;
}